--- a/style.css
+++ b/style.css
@@ -134,23 +134,25 @@ SupraNav
 }
 
 .contact-info {
-  padding: 25px;
-  justify-content: space-between;
-  width: min(50%, 785px);
+  padding: max(10px, 1vw);
+  width: min(52%, 785px);
+  justify-content: space-around;
+}
+.tagline {
 }
 .tagline h3 {
-  font-size: clamp(40px, 3.8vw, 62px);
-  line-height: 0.92;
+  font-size: min(3.8vw, 62px);
+  line-height: min(60px, 4.5vw);
 }
 .tagline h4 {
-  font-size: clamp(20px, 1.7vw, 27px);
+  font-size: min(1.7vw, 27px);
 }
 .number {
-  font-size: clamp(26px, 3.55vw, 56px);
-  line-height: 0.96;
+  font-size: min(3.55vw, 56px);
+  line-height: min(60px, 4.4vw);
 }
 .mail-link {
-  font-size: clamp(20px, 1.8vw, 28px);
+  font-size: min(1.8vw, 28px);
 }
 
 /* ============================
@@ -164,14 +166,12 @@ Main Nav
 }
 .main-nav {
   justify-content: center;
-  width: min(100%, 1700px);
+  width: min(100%, 1280px);
   margin: auto;
 }
-.main-nav li {
-  width: 255px;
-}
 .main-nav-link {
-  font-size: 20px;
+  font-size: 18px;
+  width: max(255px, 20%);
 }
 .main-nav-link a {
   padding: 10px 0;
@@ -216,23 +216,25 @@ Header
 /* Subnav Msg */
 #pink-banner-top,
 #pink-banner-bottom {
-  padding: 10px 0;
+  padding: 5px;
   border-top: 5px solid #1b1b1b;
   border-bottom: 5px solid #1b1b1b;
 }
-#sub-nav-msg h1 {
-  font-size: 36px;
+#pink-banner-top h1,
+#pink-banner-bottom h1 {
+  font-size: min(36px, 2.5vw);
   letter-spacing: 2px;
 }
 /* Subnav List */
 #sub-nav-list {
   padding: 10px 0;
   border-bottom: 5px solid #1b1b1b;
+  /*! border-top: 5px solid #1b1b1b; */
   justify-content: space-evenly;
   align-items: center;
 }
 #sub-nav-list li p {
-  font-size: 20px;
+  font-size: min(1.4vw, 20px);
   letter-spacing: 1px;
 }
 .pink-dot {
@@ -255,4 +257,15 @@ Header
   position: relative;
   top: 18%;
   width: 30%;
+}
+
+/* ============================
+Media Queries
+=============================== */
+
+/* Nav */
+@media (max-width: 1280px) {
+  .main-nav-link {
+    font-size: 15px;
+  }
 }
