--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ Mortgages
   border-radius: 30px;
   padding: min(3vw, 60px);
   width: 100%;
-  margin-top: min(2.5vw,50px);
+  margin-top: min(2.5vw, 50px);
   box-sizing: border-box;
   background: #494949;
 }
@@ -809,7 +809,7 @@ button {
   background: #e40e7f;
   width: 80%;
   margin: 40px auto 20px auto;
-  padding: min(1vw,20px);
+  padding: min(1vw, 20px);
   border-radius: 1vw;
 }
 .fast-track h5 {
@@ -873,6 +873,58 @@ button {
 #contact textarea {
   width: 100%;
   height: 200px;
+}
+
+/* ============================
+Simply Call & Guarantee Banner
+=============================== */
+
+/* Gurantee Banner */
+#guarantee {
+  background-image: url(assets/houses.jpg);
+  background-size: cover;
+  padding: 7vw 0;
+  background-position: right;
+}
+#guarantee h2 {
+  font-size: min(50px,4vw);
+}
+#guarantee h3 {
+  font-size: min(5vw,70px);
+  margin: 3vw 0;
+}
+#guarantee h3 span {
+  background: white;
+  padding: 0 10px;
+  border-radius: 0.5vw;
+  font-weight: 900;
+}
+#guarantee p {
+  font-size: min(1.8vw,34px);
+  width: 75%;
+  margin: auto;
+  line-height: 1.5;
+  font-weight: 500;
+}
+#simply-call {
+  width: fit-content;
+  margin: 2vw auto;
+  text-align: center;
+  border-radius: 1vw;
+  padding: 30px;
+}
+#simply-call h3 {
+  font-size: min(2vw,40px) !important;
+  margin: 0 !important;
+}
+#simply-call h2 {
+  font-size: 5.5vw !important;
+}
+#simply-call h5 {
+  font-size: min(2.4vw,30px) !important;
+  width: fit-content;
+  margin: auto;
+  padding: 0 20px;
 }
 
 /* ============================================================
