Adds Call Free section, updates agent-2.png ~ 1280

--- a/style.css
+++ b/style.css
@@ -991,6 +991,46 @@ img#signing-form {
   font-size: min(25px, 1.25vw);
 }
 
+/* Call Free */
+section#call-free {
+  width: 100%;
+  justify-content: start;
+  align-items: baseline;
+  border: white 0.75vw solid;
+  border-radius: 1.5vw;
+  position: relative;
+  padding: 2vw;
+  box-sizing: border-box;
+  margin-top: 8vw;
+  background: #e40e7f;
+}
+
+#call-free img {
+  position: absolute;
+  bottom: 0;
+  right: 4vw;
+  width: 25%;
+}
+
+#number h3 {
+  font-size: 3vw;
+  color: #1b1b1b;
+  letter-spacing: 2px;
+}
+
+#number a {
+  font-size: 7vw;
+  height: auto;
+  line-height: 1;
+  color: white;
+  letter-spacing: 4px;
+}
+
+div#number {
+  position: relative;
+  left: 3vw;
+}
+
 /* ============================================================
 Media Queries
 ============================================================= */
